fixed some spacing issues

--- a/priceFinder.css
+++ b/priceFinder.css
@@ -157,7 +157,11 @@
     flex-shrink: 0;
     margin-top: 15px;
 
+    width: 283px;
+
     border-bottom: 1px solid black;
+
+    justify-content: space-between;
 }
 
 p {
